# ARIS_lite

./: .buildinfo  .buildinfo.bak  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  ARIS_lite.html  LICENSE.txt  README.md  __init__.py  aris_lite.html  convert_netcdf_to_zarr.ipynb  debug__setup_framework__1.ipynb  debug__setup_framework__2.ipynb  debug_snippets.py  debug_snowmaus.py  environment.yml  genindex.html  index.html  modules.html  objects.inv  phenology.py  py-modindex.html  pyproject.toml  search.html  searchindex.js  water_budget.py  yield_expectation.py
_modules/: aris_lite.html  index.html
_modules/aris_lite/: phenology.html  water_budget.html  yield_expectation.html
_sources/: ARIS_lite.rst.txt  index.rst.txt  modules.rst.txt
_static/: documentation_options.js
aris_lite/: __init__.py  phenology.py  water_budget.py  yield_expectation.py
docs/: .gitignore  Makefile  aris_lite.rst  conf.py  index.rst
